Fixed some problems in vnc console. Closes #15

--- a/static/novnc/vnc_auto.html
+++ b/static/novnc/vnc_auto.html
@@ -9,7 +9,7 @@
         http://example.com/?host=HOST&port=PORT&encrypt=1&true_color=1
     -->
     <head>
-        <title>noVNC</title>
+        <title>Kermit VNC Console</title>
         <meta http-equiv="X-UA-Compatible" content="chrome=1">
         <link rel="stylesheet" href="include/base.css" title="plain">
         <!--
@@ -25,8 +25,7 @@
                 <table border=0 width="100%"><tr>
                     <td><div id="noVNC_status">Loading</div></td>
                     <td width="1%"><div id="noVNC_buttons">
-                        <input type=button value="Send CtrlAltDel"
-                            id="sendCtrlAltDelButton">
+                        <input type=button value="Send CtrlAltDel" id="sendCtrlAltDelButton">
                             </div></td>
                 </tr></table>
             </div>
